fix overflow layout in big screen

--- a/pull-banner/assets/stylesheets/banner.css
+++ b/pull-banner/assets/stylesheets/banner.css
@@ -2,6 +2,7 @@
   position: fixed;
   bottom: 0px;
   width: 100%;
+  max-width: 620px;
   height: 50px;
   z-index: 9999;
 }
